# restcrudtornado

./: .pre-commit-config.yaml  .pylintrc  README.md  pyproject.toml  pytest.ini  requirements.txt  widgets.db
src/widgets/: __init__.py  __main__.py  app.py  handlers.py  models.py  repo.py  toz.db
src/widgets/templates/: page.html
tests/: conftest.py  test_handlers.py  test_models.py
